--- a/BugFixes.csproj
+++ b/BugFixes.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>BugFixes</AssemblyName>
     <Product>Bug Fixes</Product>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
@@ -28,6 +28,9 @@
     </Reference>
     <Reference Include="ScenarioRuleLibrary">
       <HintPath>$(HOME)/.steam/steamapps/common/Gloomhaven/GH_Data/Managed/ScenarioRuleLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TextMeshPro">
+      <HintPath>$(HOME)/.steam/steamapps/common/Gloomhaven/GH_Data/Managed/Unity.TextMeshPro.dll</HintPath>
     </Reference>
   </ItemGroup>
   
