--- a/BugFixes.csproj
+++ b/BugFixes.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>BugFixes</AssemblyName>
     <Product>Bug Fixes</Product>
-    <Version>3.0.0</Version>
+    <Version>4.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
@@ -29,6 +29,9 @@
   <ItemGroup>
     <Reference Include="GH.Runtime" Publicize="true">
       <HintPath>$(HOME)/.steam/steamapps/common/Gloomhaven/GH_Data/Managed/GH.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="MapRuleLibrary" Publicize="true">
+      <HintPath>$(HOME)/.steam/steamapps/common/Gloomhaven/GH_Data/Managed/MapRuleLibrary.dll</HintPath>
     </Reference>
     <Reference Include="ScenarioRuleLibrary" Publicize="true">
       <HintPath>$(HOME)/.steam/steamapps/common/Gloomhaven/GH_Data/Managed/ScenarioRuleLibrary.dll</HintPath>
